# far-s3-manager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.adoc
plugin/: CMakeLists.txt  FarS3.rc  FarS3.vc.def
plugin/include/: FarApi.h  Guid.h  Message.h  Version.h  pch.h
plugin/src/: FarApi.cpp  Plugin.cpp
plugin/translations/: FarS3_en.lng
